Updated for new Twitch API, needs new bookmark popup, some tweeks and comments, but this is a pure private use project so maybe some day

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 17px;
   height: 6px;
 }
 
@@ -32,11 +32,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--lightDark);
+    background: #26354d;
+    border-radius: 17px;
+    border: 6px solid var(--dark);
 }
-
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--lightLight);
+    background: #8480da;
 }
 
 *,
@@ -45,6 +46,11 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+}
+
+h1, h2, h3, h4 {
+  margin: 0;
+  margin-bottom: 0.5em;
 }
 
 html,
@@ -67,917 +73,6 @@ app-root {
   flex-flow: wrap;
 }
 
-.ntNavbar {
-  transition: var(--transition);
-  display: flex;
-  width: 100%;
-  border-bottom: 1px solid var(--lightLight);
-  background: var(--dark);
-}
-
-.ntLogo {
-  user-select: none;
-  transition: var(--transition);
-  margin-bottom: -1px;
-  font-family: var(--poppins);
-  font-weight: 100;
-  line-height: 65px;
-  color: var(--darkDark);
-  background: var(--lightLight);
-  font-size: 1.85em;
-  letter-spacing: .05em;
-  width: 200px;
-  display: inline-flex;
-  justify-content: center;
-}
-
-.ntNavButtons {
-  margin-left: auto;
-  display: inline-flex;
-  align-items: center;
-  padding: 0 15px;
-}
-
-.ntNavButtons > button {
-  user-select: none;
-  transition: var(--transition);
-  display: inline-flex;
-  padding: 0 8px;
-  height: 35px;
-  align-items: center;
-  font-family: var(--poppins);
-  font-weight: 600;
-  border: 2px solid var(--light);
-  border-radius: 200px;
-  position: relative;
-  background: transparent;
-  color: var(--light);
-  outline: none;
-  cursor: pointer;
-  text-transform: uppercase;
-  font-size: 16px;
-}
-
-.ntNavButtons > button:hover,
-.ntNavButtons > button:focus {
-  transition: var(--transition);
-  border-color: var(--lightLight);
-  color: var(--lightLight);
-}
-
-.ntNavButtons > button + button {
-  margin-left: 5px;
-}
-
-.ntTwitchLogin:before {
-  transition: var(--transition);
-  content: '';
-  background-image: url('/assets/Glitch_White_Screen/Glitch_White_RGB.svg');
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-right: 4px;
-  height: 16px;
-  width: 16px;
-}
-
-.ntTheme {
-  width: 35px;
-  overflow: hidden;
-  background: var(--dark);
-}
-
-.ntTheme:before {
-  transition: var(--transition);
-  content: '';
-  position: absolute;
-  top: 30%;
-  left: 30%;
-  right: -75%;
-  bottom: -75%;
-  background-color: var(--light);
-  transform: rotate(45deg);
-}
-
-.ntTheme:before {
-  transition: var(--transition);
-  background-color: var(--lightLight)
-}
-
-.ntDropdown {
-  transition: var(--transition);
-  position: absolute;
-  top: 100%;
-  margin-top: 10px;
-  right: 0;
-  border: 2px solid var(--lightLight);
-  padding: 10px 0;
-  width: 160px;
-  background: var(--dark);
-  max-height: 240px;
-  cursor: context-menu;
-  opacity: 0;
-  pointer-events: none;
-}
-
-.ntDropdown.visible {
-  opacity: 1;
-  pointer-events: all;
-}
-
-.ntSelectableValue {
-  cursor: pointer;
-  transition: var(--transition);
-  border: none;
-  background: none;
-  font-family: var(--poppins);
-  font-weight: 300;
-  color: var(--lightLight);
-  display: block;
-  line-height: 22px;
-  width: 100%;
-  outline: none;
-}
-
-.ntSelectableValue:not(.selected):hover,
-.ntSelectableValue:not(.selected):focus {
-  transition: var(--transition);
-  color: var(--darkDark);
-  background: var(--light);
-}
-
-.ntSelectableValue.selected {
-  color: var(--darkDark);
-  background: var(--lightLight);
-}
-
-.ntBody {
-  display: flex;
-  flex-wrap: wrap;
-  flex-flow: wrap;
-  width: 100%;
-}
-
-.ntContainer {
-  display: flex;
-  flex-wrap: wrap;
-  flex-flow: wrap;
-  padding: 0 30px;
-  position: relative;
-  width: 100%;
-  max-height: 100%;
-}
-
-.ntContainer + .ntContainer {
-  margin-top: 45px;
-}
-
-.ntContainer:first-of-type {
-  margin-top: 60px;
-}
-
-.ntContainer:last-of-type {
-  margin-bottom: 60px;
-}
-
-.ntContainer:after {
-  transition: var(--transition);
-  content: '';
-  position: absolute;
-  top: 38px;
-  height: 2px;
-  left: 75px;
-  right: 30px;
-  z-index: 1;
-  background: var(--lightLight);
-}
-
-.ntContainerTitle {
-  user-select: none;
-  transition: var(--transition);
-  background: var(--lightLight);
-  color: var(--dark);
-  display: flex;
-  height: 40px;
-  padding: 0 25px;
-  font-weight: 500;
-  font-size: 1.1em;
-  border-radius: 0 200px;
-  font-family: var(--poppins);
-  align-items: center;
-}
-
-.ntOptionButton {
-  user-select: none;
-  transition: var(--transition);
-  color: var(--lightLight);
-  background: var(--dark);
-  border: 2px solid var(--lightLight);
-  display: flex;
-  height: 40px;
-  width: 40px;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  position: relative;
-  z-index: 1;
-  outline: none;
-  font-size: 16px;
-}
-
-* + .ntOptionButton {
-  margin-left: 16px;
-  border-radius: 200px;
-  border-color: transparent var(--light);
-}
-
-.ntOptionButton:hover,
-.ntOptionButton:focus {
-  transition: var(--transition);
-  color: var(--dark);
-}
-
-.ntOptionButton > i {
-  position: relative;
-  z-index: 2;
-}
-
-.ntOptionButton:before {
-  transition: var(--transition);
-  content: '';
-  background: var(--dark);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 200px;
-  transform: scale(0);
-}
-
-.ntOptionButton:hover:before,
-.ntOptionButton:focus:before {
-  transition: var(--transition);
-  background: var(--lightLight);
-  transform: scale(.9);
-}
-
-.ntBlockList {
-  display: flex;
-  justify-content: center;
-  width: calc(var(--innerWidth) - 40px);
-  margin-top: 20px;
-  flex-wrap: wrap;
-}
-
-.ntNote {
-  user-select: none;
-  transition: var(--transition);
-  color: var(--lightDark);
-  display: block;
-  width: 100%;
-  font-weight: 200;
-  font-family: var(--poppins);
-  padding: 40px 10px;
-  text-align: center;
-}
-
-.ntPopup {
-  transition: var(--transition);
-  position: fixed;
-  pointer-events: none;
-  opacity: 0;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 9001;
-  background-color: rgba(0, 0, 0, .67);
-  backdrop-filter: blur(5px);
-}
-
-.ntPopup.visible {
-  top: 0;
-  bottom: 0;
-  pointer-events: all;
-  opacity: 1;
-}
-
-.ntPopupClose {
-  transition: var(--transition);
-  color: var(--dark);
-  border: 2px solid var(--lightLight);
-  background: var(--lightLight);
-  position: absolute;
-  top: 25px;
-  right: 25px;
-  font-size: 2em;
-  width: 60px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-.ntPopupClose:hover,
-.ntPopupClose:focus {
-  transition: var(--transition);
-  color: var(--lightLight);
-  background: var(--dark);
-  border-color: var(--lightLight);
-}
-
-.visible .ntPopupBody {
-  margin-left: 0;
-  opacity: 1;
-}
-
-.ntPopupBody {
-  transition: var(--transition);
-  background: var(--dark);
-  height: 100%;
-  display: flex;
-  max-width: 520px;
-  padding: 20px 30px;
-  margin-left: -520px;
-  opacity: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  margin-right: auto;
-  flex-wrap: wrap;
-  flex-flow: wrap;
-  align-items: center;
-}
-
-.ntPopupTitle {
-  transition: var(--transition);
-  font-size: 2em;
-  color: var(--light);
-  text-align: center;
-  width: 100%;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-top: auto;
-  position: relative;
-  line-height: 1;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-}
-
-.ntPopupTitle:before {
-  transition: var(--transition);
-  content: '';
-  position: absolute;
-  width: 20%;
-  left: 40%;
-  bottom: -1px;
-  height: 2px;
-  background: var(--light);
-}
-
-.ntPopupForm {
-  transition: var(--transition);
-  margin-top: 35px;
-  margin-bottom: auto;
-  width: 100%;
-}
-
-.ntPopupFieldSet + .ntPopupFieldSet {
-  margin-top: 25px;
-}
-
-.ntPopupLabel {
-  user-select: none;
-  transition: var(--transition);
-  font-size: 12px;
-  font-family: var(--poppins);
-  line-height: 1;
-  padding: 4px 16px;
-  color: var(--dark);
-  background: var(--lightLight);
-  margin-bottom: -2px;
-  position: relative;
-  border-radius: 12px 12px 0 0;
-}
-
-.ntPopupLabel:after {
-  transition: var(--transition);
-  position: absolute;
-  border: 2px solid var(--red);
-  padding: 4px 8px;
-  content: attr(title);
-  text-transform: uppercase;
-  font-weight: 500;
-  top: 25%;
-  bottom: -25%;
-  left: 100%;
-  opacity: 0;
-  color: var(--red);
-  z-index: 0;
-}
-
-.ntPopupLabel.ng-invalid {
-  background: var(--red);
-}
-.ntPopupLabel.ng-invalid:after {
-  top: 0;
-  bottom: 0;
-  opacity: 1;
-}
-
-.ntPopupInput {
-  transition: var(--transition);
-  width: 100%;
-  border: 2px solid var(--lightLight);
-  background: var(--dark);
-  color: var(--light);
-  font-family: var(--poppins);
-  line-height: 1;
-  padding: 8px 16px;
-  font-size: 16px;
-  outline: none;
-  position: relative;
-  z-index: 1;
-  border-radius: 0 200px 200px;
-}
-
-.ntPopupInput.ng-invalid {
-  border-color: var(--red);
-}
-
-.ntPopupControls {
-  user-select: none;
-  display: flex;
-  margin-top: 35px;
-  width: 100%;
-  justify-content: flex-end;
-}
-
-.ntPopupButton {
-  transition: var(--transition);
-  font-family: var(--poppins);
-  font-size: 16px;
-  line-height: 40px;
-  display: flex;
-  padding: 0 18px;
-  font-weight: 600;
-  color: var(--lightLight);
-  border: 2px solid var(--lightLight);
-  background: var(--dark);
-  cursor: pointer;
-  border-radius: 200px;
-}
-
-.ntPopupButton:hover,
-.ntPopupButton:focus {
-  transition: var(--transition);
-  background: var(--lightLight);
-  color: var(--dark);
-}
-
-.ntPopupButton:disabled {
-  pointer-events: none;
-  cursor: not-allowed;
-  border-color: var(--red);
-  color: var(--red);
-}
-
-.ntPopupButton.cancel {
-  opacity: .8;
-}
-
-.ntPopupButton + .ntPopupButton {
-  margin-left: 10px;
-}
-
-.ntTwitchAvatar {
-  width: 35px;
-  height: 35px;
-  background-size: cover!important;
-  background-position: center!important;
-  background-repeat: no-repeat!important;
-}
-
-.ntStreamPreview {
-  --width: calc(((var(--innerWidth) - 60px) * .25) - 30px);
-  display: inline-flex;
-  position: relative;
-  width: var(--width);
-  height: calc(var(--width) * 0.56369785794813979706877113866967);
-  margin: 10px;
-  margin-top: 20px;
-}
-
-.ntStreamPreviewImage {
-  transition: all ease .2s;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 15px;
-  box-shadow: 0 3px 10px 0px rgba(123, 123, 123, 0), 0 0 5px -1px transparent;
-}
-
-.ntStreamPreview:hover .ntStreamPreviewImage {
-  box-shadow: 0 3px 10px 0px rgba(123, 123, 123, 0.8), 0 0 5px -1px var(--light);
-}
-
-.ntstreamInfoOverlay {
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: .6vw;
-  background: linear-gradient(180deg, rgba(0, 0, 0, .5) 0%, transparent 80%);
-  border-radius: 15px 15px 0 0;
-}
-
-.ntStreamerInfo {
-  display: flex;
-  align-items: center;
-}
-
-.ntStreamerLogo {
-  --iconSize: 45px;
-  --borderSize: 0px;
-  width: calc(var(--iconSize) + var(--borderSize) * 2);
-  height: calc(var(--iconSize) + var(--borderSize) * 2);
-  background-size: cover;
-  border-radius: 200px;
-  display: inline-block;
-  vertical-align: bottom;
-  margin-right: 10px;
-  z-index: 1;
-  position: relative;
-}
-
-.ntStreamerLogo.drop {
-  position: absolute;
-  top: .6vw;
-  left: .6vw;
-  filter: blur(4px);
-  top: calc(.6vw + 3.5%);
-  z-index: 0;
-}
-
-.ntStreamerDisplayName {
-  font-weight: bold;
-  color: var(--light);
-  font-size: 14px;
-  display: inline-block;
-  text-shadow: -1px -1px var(--dark), 1px 1px var(--dark), 1px -1px var(--dark), -1px 1px var(--dark);
-}
-
-.ntStreamInfo {
-  transition: var(--transition);
-  position: absolute;
-  left: 5px;
-  right: 5px;
-  opacity: 0;
-  bottom: -10px;
-  pointer-events: none;
-  background: var(--light);
-  padding: 5px 20px;
-  color: var(--dark);
-  font-size: 12px;
-  text-align: center;
-  border-radius: 15px;
-}
-
-.ntStreamPreview:hover .ntStreamInfo {
-  bottom: 5px;
-  pointer-events: all;
-  opacity: .85;
-}
-
-.ntStreamInfo i {
-  font-size: 14px;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 5px;
-}
-
-.ntStreamInfo i + b {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.ntStreamGameInfo,
-.ntStreamViewerCount {
-  display: inline-block
-}
-
-.ntStreamGameInfo + .ntStreamViewerCount,
-.ntStreamViewerCount + .ntStreamGameInfo {
-  margin-left: 10px;
-}
-
-.ntStreamStatus {
-  transition: var(--transition);
-  font-size: 14px;
-  margin-bottom: 5px;
-  font-weight: bolder;
-  color: var(--darkDark);
-}
-
-.ntStreamPopup,
-.ntChatPopup {
-  transition: var(--transition);
-  position: absolute;
-  bottom: calc(100% + 30px);
-  width: calc(50% - 2.5px);
-  background: var(--light);
-  border: none;
-  padding: 4px 0;
-  margin: 0;
-  font-family: var(--poppins);
-  color: var(--dark);
-  font-size: 14px;
-  font-weight: 500;
-  text-align: center;
-  cursor: pointer;
-  user-select: none;
-  outline: none;
-  border-radius: 200px;
-}
-
-.ntStreamPopup:hover,
-.ntChatPopup:hover,
-.ntStreamPopup:focus,
-.ntChatPopup:focus {
-  transition: var(--transition);
-  background: var(--lightLight);
-}
-
-.ntStreamPreview:hover .ntStreamInfo .ntStreamPopup,
-.ntStreamPreview:hover .ntStreamInfo .ntChatPopup {
-  bottom: calc(100% + 5px);
-}
-
-.ntStreamPopup {
-  left: 0;
-}
-
-.ntChatPopup {
-  right: 0;
-}
-
-.ntBookmark {
-  transition: var(--transition);
-  --width: calc(((var(--innerWidth) - 60px) * .25) - 30px);
-  display: inline-flex;
-  position: relative;
-  width: var(--width);
-  height: 80px;
-  margin: 10px;
-  margin-top: 20px;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid var(--lightLight);
-  color: var(--light);
-  background: var(--dark);
-  overflow: hidden;
-  text-decoration: none;
-  border-radius: 200px;
-}
-
-.ntBookmark:hover {
-  padding-right: 35px;
-}
-
-.ntBookmark:hover,
-.ntBookmark:focus {
-  transition: var(--transition);
-  background: var(--darkDark);
-  color: var(--lightLight);
-}
-
-.ntBookmarkInfo {
-  text-align: center;
-}
-
-.ntBookmarkTitle {
-  font-size: 16px;
-  font-weight: 200;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.ntBookmarkTitle img {
-  display: none;
-}
-
-.ntBookmarkTitle img.visible {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin-right: 8px;
-}
-
-.ntBookmarkLink {
-  transition: var(--transition);
-  opacity: 0;
-  margin-top: 0px;
-  font-size: 10px;
-  height: 0px;
-  font-weight: 600;
-}
-
-.ntBookmark:hover .ntBookmarkLink,
-.ntBookmark:focus .ntBookmarkLink {
-  font-size: 10px;
-  margin-top: 5px;
-  height: 16px;
-  opacity: 1;
-}
-
-.ntBookmarkOptions {
-  transition: var(--transition);
-  position: absolute;
-  top: 5px;
-  right: -5px;
-  bottom: 5px;
-  opacity: 0;
-  pointer-events: none;
-  user-select: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column;
-}
-
-.ntBookmark:hover .ntBookmarkOptions {
-  right: 5px;
-  opacity: 1;
-  pointer-events: all;
-}
-
-.ntBookmarkOptionButton {
-  transition: var(--transition);
-  background: none;
-  color: var(--lightLight);
-  border: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  height: 36px;
-  width: 36px;
-  line-height: 1;
-  border-radius: 200px;
-  padding: 0;
-  outline: none;
-  font-size: 18px;
-  user-select: none;
-  cursor: pointer;
-}
-
-.ntBookmarkOptionButton:hover,
-.ntBookmarkOptionButton:focus {
-  transition: var(--transition);
-  background: var(--lightLight);
-  color: var(--dark);
-}
-
-.ntBookmarkOptionButton + .ntBookmarkOptionButton {
-  margin-top: -2px;
-}
-
-.ntVolumeControl {
-  display: flex;
-  align-items: center;
-  padding: 0 10px;
-  padding-bottom: 2px;
-  font-weight: 200;
-}
-
-.ntVolumeControl span {
-  margin-right: 10px;
-}
-
-.ntVolumeControl input {
-  transition: var(--transition);
-  display: inline-flex;
-  background: none;
-  border: 2px solid transparent;
-  border-color: transparent var(--light);
-  border-radius: 200px;
-  font-family: inherit;
-  color: var(--light);
-  padding: 0 10px;
-  height: 25px;
-  outline: none;
-  align-items: center;
-  justify-content: center;
-  line-height: 25px;
-  text-align: center;
-  text-decoration: underline;
-  width: 60px;
-  cursor: pointer;
-  position: relative;
-  z-index: 1;
-}
-
-.ntVolumeControl input:hover {
-  transition: var(--transition);
-  color: var(--dark);
-}
-
-.ntVolumeControl input:focus {
-  transition: var(--transition);
-  color: var(--dark);
-  text-decoration: none;
-}
-
-.ntVolumeControl input + span {
-  transition: var(--transition);
-  pointer-events: none;
-  position: relative;
-  z-index: 0;
-  margin-left: -56px;
-  border-radius: 200px;
-  width: 52px;
-  height: 25px;
-  transform: scale(0);
-  background-color: var(--light);
-}
-
-.ntVolumeControl input:hover + span,
-.ntVolumeControl input:focus + span {
-  transition: var(--transition);
-  background-color: var(--light);
-  transform: scale(1);
-}
-
-.ntVolumeControl input::-webkit-inner-spin-button {
-  display: none;
-}
-
-@media (max-width: 1440px) {
-  .ntBookmark,
-  .ntStreamPreview {
-    --width: calc(((var(--innerWidth) - 60px) * (1 / 3)) - 30px);
-  }
-}
-
-@media (max-width: 768px) {
-  .ntContainer {
-    padding: 0 20px;
-  }
-
-  .ntBookmark {
-    margin-top: 10px;
-    height: 60px;
-  }
-
-  .ntBlockList {
-    width: calc(var(--innerWidth) - 20px);
-  }
-
-  .ntContainer:after {
-    right: 20px;
-  }
-
-  .ntBookmark,
-  .ntStreamPreview {
-    --width: calc(((var(--innerWidth) - 60px) * (1 / 2)) - 10px);
-  }
-}
-
-@media (max-width: 425px) {
-  .ntContainer {
-    padding: 0 10px;
-  }
-
-  .ntBookmark {
-    margin: unset;
-    margin-top: 10px;
-  }
-
-  .ntBlockList {
-    width: calc(var(--innerWidth) - 20px);
-  }
-
-  .ntContainer:after {
-    right: 10px;
-  }
-
-  .ntBookmark,
-  .ntStreamPreview {
-    --width: calc(((var(--innerWidth) - 60px)));
-  }
-}
-
-/*
-  BRIGHT THEME
-*/
 body.bright {
   --darkLight: #fff;
   --dark: #f4f4f4;
@@ -986,8 +81,4 @@ body.bright {
   --lightLight: #000;
   --light: #151515;
   --lightDark: #4d4d4d;
-}
-
-body.bright .ntTwitchLogin:before {
-  background-image: url('/assets/Glitch_Black_Screen/Glitch_Black_RGB.svg');
 }
