--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,116 +1,31 @@
-<div class="ntNavbar">
-  <div class="ntLogo">NEWTAB</div>
-  <div class="ntNavButtons" (mouseleave)="languageDropdown = false; twitchDropdown = false">
-    <button class="ntTwitchLogin" (click)="authTwitch()" *ngIf="!twitchAccount">{{langua.g('connectTwitch')}}</button>
-    <button class="ntTwitchAvatar" *ngIf="twitchAccount" [style.backgroundImage]="'url('+twitchAccount.profile_image_url+')'" (click)="twitchDropdown = !twitchDropdown">
-      <div class="ntDropdown" [class.visible]="twitchDropdown">
-        <button class="ntSelectableValue" (click)="twitchLogout()">{{langua.g('twitch_logout')}}</button>
-      </div>
-    </button>
-    <button class="ntLanguageSelector" (click)="languageDropdown = !languageDropdown">
-      <div class="ntSelectedLanguage">{{langua.availableDetail[langua.current].id | uppercase}}</div>
-      <div class="ntDropdown" [class.visible]="languageDropdown">
-        <button class="ntSelectableValue" [class.selected]="langua.current === lang.id" *ngFor="let lang of langua.available | orderBy:['display']" (click)="langua.setLang(lang.id); languageDropdown = false">{{lang.display}}</button>
-      </div>
-    </button>
-    <button class="ntTheme" (click)="toggleTheme()"></button>
-  </div>
-</div>
-
-<!-- Bookmarks Section -->
-<div class="ntBody">
-  <div class="ntContainer">
-    <div class="ntContainerTitle">{{langua.g('bookmarks')}}</div>
-    <button class="ntOptionButton" (click)="bookmarkCreation = true">
-      <i class="material-icons">add</i>
-    </button>
-    <div class="ntBlockList" *ngIf="bookmarks.length">
-      <a class="ntBookmark" [href]="bookmark.link" *ngFor="let bookmark of bookmarks; let i = index">
-        <div class="ntBookmarkInfo">
-          <div class="ntBookmarkTitle">
-            <img [src]="bookmark.link + '/favicon.ico'" [class.visible]="!bookmark?.noFavicon" (error)="bookmark.noFavicon = true">
-            <span>{{bookmark.title}}</span>
-          </div>
-          <div class="ntBookmarkLink">{{bookmark.link | uppercase}}</div>
-        </div>
-        <div class="ntBookmarkOptions">
-          <button (click)="setBookmarkEditMode($event, i)" class="ntBookmarkOptionButton">
-            <i class="material-icons">settings</i>
-          </button>
-        </div>
-      </a>
-    </div>
-    <div class="ntNote" *ngIf="!bookmarks?.length">{{langua.g('no_bookmarks')}}</div>
-  </div>
-
-<!-- Stream List Section -->
-  <div class="ntContainer">
-    <div class="ntContainerTitle">{{langua.g('streams')}}</div>
-    <div class="ntVolumeControl">
-      <span>{{langua.g('popup_volume')}}</span>
-      <input type="number" [(value)]="volume" (blur)="volume = $event.target.value" [max]="100" [min]="0" step="1">
-      <span></span>
-    </div>
-    <div class="ntBlockList" *ngIf="streams.length">
-      <div class="ntStreamPreview" *ngFor="let stream of streams">
-        <a class="ntStreamPreviewImage" [style.backgroundImage]="'url('+stream.preview.large+')'" [href]="stream.channel.url"></a>
-        <div class="ntstreamInfoOverlay">
-          <div class="ntStreamerInfo">
-            <div class="ntStreamerLogo" [style.backgroundImage]="'url('+stream.channel.logo+')'"></div>
-            <div class="ntStreamerLogo drop" [style.backgroundImage]="'url('+stream.channel.logo+')'"></div>
-            <div class="ntStreamerDisplayName">{{stream.channel.display_name}}</div>
-          </div>
-        </div>
-        <div class="ntStreamInfo">
-          <div class="ntStreamInfoActions">
-            <button class="ntStreamPopup" (click)="popoutStream(stream.channel.name)">{{langua.g('stream_popup_stream')}}</button>
-            <button class="ntChatPopup" (click)="popoutChat(stream.channel.name)">{{langua.g('stream_popup_chat')}}</button>
-          </div>
-          <div class="ntStreamStatus">
-            <b>{{stream.channel.status}}</b>
-          </div>
-          <div class="ntStreamViewerCount">
-            <i class="material-icons">people_outline</i>
-            <b>{{stream.viewers}}</b>
-          </div>
-          <div class="ntStreamGameInfo">
-            <i class="material-icons">videogame_asset</i>
-            <b>{{stream.channel.game}}</b>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="ntNote" *ngIf="!twitchAccount">{{langua.g('no_twitch')}}</div>
-    <div class="ntNote" *ngIf="twitchAccount && !streams.length">{{langua.g('no_streams')}}</div>
-  </div>
-</div>
-
-<!-- Bookmark Update or Create Section -->
-<div class="ntPopup" [class.visible]="bookmarkCreation || bookmarkEditing">
-  <button class="ntPopupClose" (click)="bookmarkCreation = false; resetBookmark()">
-    <i class="material-icons">close</i>
-  </button>
-  <div class="ntPopupBody">
-    <div *ngIf="bookmarkCreation" class="ntPopupTitle">{{langua.g('add_new_bookmark')}}</div>
-    <div *ngIf="bookmarkEditing" class="ntPopupTitle">{{langua.g('edit_bookmark')}}</div>
-
-    <div class="ntPopupForm">
-      <div class="ntPopupFieldSet">
-        <label for="bookmarkTitle" [class.ng-invalid]="bookmarkTitle?.invalid" title="{{langua.g('required')}}" class="ntPopupLabel">{{langua.g('new_bookmark_title')}}</label>
-        <input class="ntPopupInput" type="text" #bookmarkTitle id="bookmarkTitle" required maxlength="32" [(ngModel)]="bookmark.title">
-      </div>
-
-      <div class="ntPopupFieldSet">
-        <label for="bookmarkLink" [class.ng-invalid]="bookmarkLink?.invalid" title="{{langua.g('required')}}" class="ntPopupLabel">{{langua.g('new_bookmark_link')}}</label>
-        <input class="ntPopupInput" type="text" #bookmarkLink id="bookmarkLink" required [(ngModel)]="bookmark.link">
-      </div>
-
-      <div class="ntPopupControls">
-        <button class="ntPopupButton delete" (click)="removeBookmark($event, bookmark.ix)" *ngIf="bookmarkEditing">{{langua.g('popup_delete')}}</button>
-        <button class="ntPopupButton cancel" (click)="bookmarkCreation = bookmarkCreation = false; resetBookmark()">{{langua.g('popup_cancel')}}</button>
-        <button class="ntPopupButton" [disabled]="!bookmarkTitle?.value?.length || !bookmarkLink?.value?.length" (click)="updateOrCreateBookmark(bookmark?.ix)">{{langua.g('popup_confirm')}}</button>
-      </div>
+<div class="n-header">
+  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="visual" viewBox="0 0 580 270" width="580" height="270" version="1.1">
+    <path style="transform: translate(22rem, 2.5rem);" d="M128.5 -132.4C169.5 -118.7 207.8 -81 219.8 -35.5C231.7 10.1 217.2 63.5 181.5 85.4C145.8 107.4 88.9 97.7 45.6 104.5C2.2 111.4 -27.6 134.6 -55.8 133.1C-83.9 131.6 -110.4 105.3 -133 73.3C-155.6 41.3 -174.3 3.6 -174.5 -37C-174.7 -77.6 -156.5 -121.1 -124.3 -136.5C-92.1 -151.8 -46.1 -138.9 -1.2 -137.5C43.7 -136.1 87.4 -146.2 128.5 -132.4" fill="#26354d"/>
+    <path d="M212.4 -247.8C259.9 -213.3 272.2 -131.8 308.9 -37.6C345.6 56.5 406.6 163.3 372.1 207C337.5 250.8 207.4 231.6 109 242.8C10.6 254 -56.1 295.7 -136.8 299.5C-217.5 303.2 -312.3 269.1 -325.1 207C-337.8 144.9 -268.6 54.9 -245.9 -38C-223.2 -130.9 -246.9 -226.7 -213.6 -263.7C-180.4 -300.7 -90.2 -278.8 -3.9 -274.2C82.5 -269.6 165 -282.3 212.4 -247.8" fill="#8480da"/>
+  </svg>
+  <div class="n-header-inner">
+    <div class="n-header-logo">NewTab</div>
+    <div class="n-header-controls">
+      <button *ngIf="!twitch.userToken" (click)="authTwitch()">Connect</button>
+      <button class="n-profile-avatar" *ngIf="twitch.userToken && twitchAccount" (click)="twitchLogout()"><img [src]="twitchAccount.profile_image_url"></button>
+      <button (click)="toggleTheme()"><span class="material-icons">{{selectedTheme === 'dark' ? 'dark_mode' : 'light_mode'}}</span></button>
     </div>
   </div>
 </div>
 
+<div class="n-bookmark-list">
+  <app-bookmark *ngFor="let bookmark of bookmarks" [bookmark]="bookmark"></app-bookmark>
+  <div class="n-list-info">
+    <h2>New Local Bookmark</h2>
+    <button><i class="material-icons">add</i><span>Bookmark</span></button>
+  </div>
+</div>
+
+<div class="n-stream-list">
+  <div class="n-list-info" *ngIf="!twitch.userToken">
+    <h1>Followed Streams</h1>
+    <h2>See all your followed streams in one place!</h2>
+    <button (click)="authTwitch()">Connect with Twitch</button>
+  </div>
+  <app-stream *ngFor="let stream of streams" [stream]="stream" [volume]="volume"></app-stream>
+</div>
